--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div id="error_message"></div>
   <form id="myform" onsubmit="return validate();">
     <div class="input_field">
-        <input type="text" placeholder="First Name" id="fname" data-bind='value: FirstNNNNNN'>
+        <input type="text" placeholder="First Name test" id="fname" data-bind='value: FirstName'>
     </div>
     <div class="input_field">
         <input type="text" placeholder="Last Name" id="lname" data-bind='value: LastName'>
